--- a/index.html
+++ b/index.html
@@ -1,10 +1,30 @@
 <!doctype html>
 <html lang="ja">
 <head>
+  <link rel="manifest" href="./manifest.json">
   <title>Markdown Editor</title>
 </head>
 <body>
   <div id="app"></div>
   <script src="./dist/index.js"></script>
+  <script type="text/javascript">
+    // ブラウザにサービスワーカーが実装されているかをチェック
+    if ('serviceWorker' in navigator) {
+
+      // ページのロードが完了した時に実行する関数を登録
+      window.addEventListener('load', () => {
+
+        // ここがサービスワーカーを登録する処理です。
+        // register() には、サービスワーカーのパスを渡します。
+        // サービスワーカーの登録が完了とエラー時の処理を登録
+        navigator.serviceWorker.register('./sw.js')
+        .then((registration) => {
+          console.log('ServiceWorker registration successful with scope: ', registration.scope)
+        }, (err) => {
+          console.log('ServiceWorker registration failed: ', err)
+        })
+      })
+    }
+  </script>
 </body>
 </html>
